kube/components/data-catalogs/nessie/nessie-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nessie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nessie
  template:
    metadata:
      labels:
        app: nessie
    spec:
      containers:
        - name: nessie
          image: projectnessie/nessie:latest
          ports:
            - containerPort: 19120
          volumeMounts:
            - mountPath: /data
              name: nessie-storage
            - name: mysql-driver
              mountPath: /opt/nessie/lib
      volumes:
        - name: nessie-storage
          persistentVolumeClaim:
            claimName: nessie-pvc
        - name: mysql-driver
          emptyDir: { }
