kube/components/data-catalogs/nessie/nessie-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nessie
  labels:
    app: nessie
spec:
  type: NodePort
  ports:
    - name: https
      port: 19120
      targetPort: 19120
      nodePort: 30120
      protocol: TCP
  selector:
    app: nessie
